@@ -1,4 +1,5 @@
 **pnp-0.6.13 ??/??/2011**
+  * Feature: New option --ignore-hosts added to check_pnp_rrds.pl ( by Jochen Bern )
 
 **pnp-0.6.12 04/22/2011**
   * Feature: mod_gearman support added
